--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Sushmadeegoju.github.io/sushmadeegoju/",
+  "homepage": "https://sushmadeegoju.github.io/sushmadeegoju/",
   "name": "sushmadeegoju",
   "version": "0.1.0",
   "private": true,
